--- a/src/Makemodule.am
+++ b/src/Makemodule.am
@@ -1,11 +1,11 @@
 bin_PROGRAMS += b1_timing
 
 b1_timing_SOURCES = \
-	src/b1_timing.cpp 
+	src/b1_timing.cpp
 
 
-b1_timing_LDADD = $(BOOST_FILESYSTEM_LIB) $(BOOST_SYSTEM_LIB)  $(BOOST_CHRONO_LIB) $(BOOST_REGEX_LIB) $(BOOST_TIMER_LIB) $(MPI_CXXLDFLAGS)
+b1_timing_LDADD = $(BOOST_FILESYSTEM_LIB) $(BOOST_SYSTEM_LIB)  $(BOOST_CHRONO_LIB) $(BOOST_REGEX_LIB) $(BOOST_TIMER_LIB) $(MPI_CXXLDFLAGS) -lbertini2
 
-#libpartitionParse.a 
+#libpartitionParse.a
 
 b1_timing_CXXFLAGS = -D_HAVE_MPI -std=c++11 $(BOOST_CPPFLAGS)
